--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
