--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.0.0",
     "next": "13.5.4",
     "react": "^18",
+    "react-datepicker": "^4.20.0",
     "react-dom": "^18",
     "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^4.19.0",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
