--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.5.1",
     "clsx": "^2.0.0",
+    "cookies-next": "^4.0.0",
     "next": "13.5.4",
     "react": "^18",
     "react-datepicker": "^4.20.0",
     "react-dom": "^18",
+    "react-redux": "^8.1.3",
     "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0"
   },
