- customer sign in sign up finised - auth connected - redux connected

--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/jsonwebtoken": "^9.0.3",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "cookies-next": "^4.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "next": "13.5.4",
     "react": "^18",
     "react-datepicker": "^4.20.0",
