--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-datepicker": "^4.20.0",
     "react-dom": "^18",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
     "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0"
